# Birdbrain-Python-Library-2

./: .gitignore  .pylintrc  README.rst  TEST_COVERAGE.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  packaging_problem.txt
docs.old/: BirdBrain.rst  birdbrain_python_library_2.rst  modules.rst
docs/reference/: birdbrain_python_library.rst
examples/: FinchTest.py  HummingbirdTest.py  tasks_example.py
src/: BirdBrain.py  birdbrain_constant.py  birdbrain_device.py  birdbrain_exception.py  birdbrain_finch.py  birdbrain_finch_input.py  birdbrain_finch_output.py  birdbrain_hummingbird.py  birdbrain_hummingbird_input.py  birdbrain_hummingbird_output.py  birdbrain_microbit.py  birdbrain_microbit_input.py  birdbrain_microbit_output.py  birdbrain_request.py  birdbrain_state.py  birdbrain_tasks.py  birdbrain_utility.py
src/birdbrain/: __init__.py  birdbrain_device.py  birdbrain_finch.py  birdbrain_finch_input.py  birdbrain_finch_output.py  birdbrain_hummingbird.py  birdbrain_hummingbird_input.py  birdbrain_hummingbird_output.py  birdbrain_microbit.py  birdbrain_microbit_input.py  birdbrain_microbit_output.py  birdbrain_request.py  constant.py  device.py  hummingbird.py  microbit.py  state.py  tasks.py
src/birdbrain_python_library_2/: __main__.py  birdbrain_device.py  birdbrain_finch.py  birdbrain_finch_input.py  birdbrain_finch_output.py  birdbrain_hummingbird.py  birdbrain_hummingbird_input.py  birdbrain_hummingbird_output.py  birdbrain_microbit.py  birdbrain_microbit_input.py  birdbrain_microbit_output.py  (+2 more)
tests/: test_birdbrain_python_library.py
(+34 files in other folders)
