[build-system]
requires = [ "setuptools>=80.9.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "birdbrain-python-library-2"
version = "0.9.12"
license = "LGPL-3.0-only"
description = "Rewritten Python Library for Birdbrain Technologies Hummingbird Bit and Finch 2."
readme = "README.md"
authors = [ { name = "Frank Morton", email = "fmorton@base2inc.com" } ]
url = "https://github.com/fmorton/BirdBrain-Python-Library-2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL-3.0-only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fmorton/BirdBrain-Python-Library-2"
Issues = "https://github.com/fmorton/BirdBrain-Python-Library-2/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["birdbrain_python_library_2"]

[tool.black]
line-length = 140
testpaths = ["tests"]
target-version = ["py37"]
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = ["tests"]